--- a/iOS/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantDetail/RestaurantDetailVC.xib
+++ b/iOS/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantDetail/RestaurantDetailVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="13A476u" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
@@ -8,6 +8,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RestaurantDetailVC">
             <connections>
                 <outlet property="_avatarImageView" destination="23" id="qJk-zJ-mcA"/>
+                <outlet property="_avatarTip" destination="gQ4-gO-qNC" id="Eop-OA-nRE"/>
                 <outlet property="_lbAsk" destination="wJr-g6-Qfb" id="odh-mO-DFp"/>
                 <outlet property="_lbMenu" destination="N6y-tt-9lT" id="qJX-Le-Tt8"/>
                 <outlet property="_lbMore" destination="vNG-rJ-WiE" id="02l-a0-49w"/>
@@ -22,11 +23,14 @@
                 <outlet property="btUserQuestion" destination="19" id="44"/>
                 <outlet property="lbDeal" destination="22" id="117"/>
                 <outlet property="lbDetail" destination="18" id="45"/>
+                <outlet property="lbDetailTip" destination="jU5-rx-eHi" id="4i0-W1-TT5"/>
                 <outlet property="lbFav" destination="JFb-OW-SpL" id="jti-Xq-JVX"/>
                 <outlet property="lbLongMsg" destination="26" id="46"/>
                 <outlet property="lbName" destination="17" id="48"/>
+                <outlet property="lbNameTip" destination="Dny-hX-s1R" id="R7V-ul-GJw"/>
                 <outlet property="lbOpenNow" destination="21" id="116"/>
                 <outlet property="lbSave" destination="sHw-gb-DV2" id="VvB-nh-3sL"/>
+                <outlet property="lbTitleTip" destination="0bc-aE-V9Z" id="GdI-Nv-0kO"/>
                 <outlet property="lbsortMSg" destination="24" id="49"/>
                 <outlet property="scrollViewMain" destination="94" id="98"/>
                 <outlet property="scrollViewPhotos" destination="68" id="69"/>
@@ -74,7 +78,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="60" height="40"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
-                    <state key="normal" image="22FB23DE-6A4C-49B6-995A-142A4DCB19AA">
+                    <state key="normal" image="C777BFA2-51EC-4929-907E-045C0BC7D7AA">
                         <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -279,8 +283,8 @@
                                                 <action selector="actionAvatar:" destination="-1" eventType="touchUpInside" id="90"/>
                                             </connections>
                                         </button>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Reviews and Tips" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="96">
-                                            <rect key="frame" x="20" y="3" width="156" height="21"/>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Reviews" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="96">
+                                            <rect key="frame" x="20" y="3" width="243" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="14"/>
                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
@@ -360,8 +364,8 @@
                                                 <action selector="actionAvatar:" destination="-1" eventType="touchUpInside" id="ACJ-Xc-ixy"/>
                                             </connections>
                                         </button>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Reviews and Tips" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="0bc-aE-V9Z">
-                                            <rect key="frame" x="20" y="3" width="156" height="21"/>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Tips" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="0bc-aE-V9Z">
+                                            <rect key="frame" x="20" y="3" width="227" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="14"/>
                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
@@ -541,7 +545,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                 </scrollView>
                 <view contentMode="scaleToFill" id="oiw-X9-AeQ">
-                    <rect key="frame" x="0.0" y="511" width="320" height="101"/>
+                    <rect key="frame" x="0.0" y="44" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
@@ -627,7 +631,7 @@
         </view>
     </objects>
     <resources>
-        <image name="22FB23DE-6A4C-49B6-995A-142A4DCB19AA" width="30" height="30">
+        <image name="C777BFA2-51EC-4929-907E-045C0BC7D7AA" width="30" height="30">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
