--- a/iOS/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantDetail/RestaurantDetailVC.xib
+++ b/iOS/TasteSync/Classes/ViewControllers/RestaurantTab/RestaurantDetail/RestaurantDetailVC.xib
@@ -19,6 +19,7 @@
                 <outlet property="btBack" destination="10" id="112"/>
                 <outlet property="btMenu" destination="28" id="35"/>
                 <outlet property="btMoreInfo" destination="29" id="37"/>
+                <outlet property="btNextRecomentdation" destination="104" id="GXD-bc-vQ7"/>
                 <outlet property="btRestaurant" destination="111" id="113"/>
                 <outlet property="btSave" destination="20" id="43"/>
                 <outlet property="btUserQuestion" destination="19" id="44"/>
@@ -46,7 +47,6 @@
                 <outlet property="viewImage" destination="87" id="sQ5-ww-1JM"/>
                 <outlet property="viewMap" destination="9JV-1e-qRr" id="yme-Ep-ZBk"/>
                 <outlet property="viewReomendation" destination="kyF-pa-qoV" id="Uoj-kP-W01"/>
-                <outlet property="viewTip" destination="kyF-pa-qoV" id="uVh-sK-Lgt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -81,7 +81,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="60" height="40"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
-                    <state key="normal" image="B3056D72-603B-4033-A9FD-8DA5BFCB0108">
+                    <state key="normal" image="246CE4A8-5296-4913-8EAF-18DE164E1ACC">
                         <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -221,7 +221,7 @@
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="bg340.png" id="91">
                                             <rect key="frame" x="10" y="0.0" width="300" height="193"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         </imageView>
                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Reviews and Tips" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="0bc-aE-V9Z">
                                             <rect key="frame" x="20" y="3" width="227" height="21"/>
@@ -312,7 +312,7 @@
                                         </view>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="104" userLabel="Button - arrow rec">
                                             <rect key="frame" x="290" y="89" width="20" height="20"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                             <state key="normal" backgroundImage="arrow_right.png">
                                                 <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -327,7 +327,7 @@
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="107" userLabel="Button - more rec">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="228"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                             <state key="normal">
                                                 <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -600,7 +600,7 @@
         </view>
     </objects>
     <resources>
-        <image name="B3056D72-603B-4033-A9FD-8DA5BFCB0108" width="30" height="30">
+        <image name="246CE4A8-5296-4913-8EAF-18DE164E1ACC" width="30" height="30">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
