--- a/iOS/TasteSync/Classes/ViewControllers/RecommendationsTab/RecommendDetail/Detail6/RestaurantRecommendations2.xib
+++ b/iOS/TasteSync/Classes/ViewControllers/RecommendationsTab/RecommendDetail/Detail6/RestaurantRecommendations2.xib
@@ -63,7 +63,7 @@
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="bg100.png" id="8">
                             <rect key="frame" x="5" y="0.0" width="300" height="85"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         </imageView>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="You Asked:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="9">
                             <rect key="frame" x="55" y="3" width="200" height="21"/>
